Bug fix: watermark position was not fixed on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,15 +37,27 @@ a:hover {
 
 // Styles for static.component.scss
 div#app-static-html {
-  background-image: url('assets/img/watermark-20.png');
-  background-repeat: no-repeat;
-  // background-position: bottom;
-  background-size: 50vw;
-  background-position-x: 45vw;
-  background-position-y: 63vh;
-  background-attachment: fixed;
-  // background-origin: content-box;
+  // background-image: url('assets/img/watermark-20.png');
+  // background-repeat: no-repeat;
+  // // background-position: bottom;
+  // background-size: 50vw;
+  // background-position-x: 45vw;
+  // background-position-y: 63vh;
+  // background-attachment: fixed;
+  // // background-origin: content-box;
   margin: 2rem;
+  &::before {
+    content: '';
+    display: block;
+    position: fixed;
+    left: 45vw;
+    top: 61vh;
+    width: 50vw;
+    height: 50vw;
+    z-index: -10;
+    background: url('/assets/img/watermark-20.png');
+    background-size: cover;
+  }
   ul {
     margin-left: 1rem;
   }
@@ -105,9 +117,15 @@ div#app-static-html {
   }
 
   div#app-static-html {
-    background-size: 25vw;
-    background-position-x: 60vw;
-    background-position-y: 45vh;
+    // background-size: 25vw;
+    // background-position-x: 60vw;
+    // background-position-y: 45vh;
+    &::before {
+      left: 60vw;
+      top: 45vh;
+      width: 25vw;
+      height: 25vw;
+    }
     .flex-container {
       display: flex;
       flex-direction: row;
